fixed overflow

--- a/frontend/app/scss/components/_footer.scss
+++ b/frontend/app/scss/components/_footer.scss
@@ -1,86 +1,86 @@
 .footer {
-    &-nav {
+  &-nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 40px 0;
+
+    @include tablet-all {
+      justify-content: center;
+    }
+
+    .checkout-wrap & {
+      padding: 35px 0 0;
+
+      @include tablet-all {
+        justify-content: left;
+      }
+    }
+  }
+
+  &-item {
+    @include tablet-all {
+      padding: 0 10px;
+    }
+
+    .checkout-wrap &:first-child {
+      padding-left: 0;
+    }
+  }
+
+  &-checkout {
+    .checkout-info {
+      @include tablet-all {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 40px 0;
-
-        @include tablet-all {
-            justify-content: center;
-        }
-
-        .checkout-wrap & {
-            padding: 35px 0 0;
-
-            @include tablet-all {
-                justify-content: left;
-            }
-        }
+        flex-wrap: wrap;
+        padding-bottom: 35px;
+      }
     }
+  }
+
+  &-link {
+    color: $color-primary6;
+    font-size: 14px;
+
+    &:hover {
+      color: $color-primary22;
+    }
+  }
+
+  &-payment_methods {
+    margin: 0 -5px;
+    overflow: hidden;
+    padding-top: 35px;
 
     &-item {
-        @include tablet-all {
-            padding: 0 10px;
-        }
-
-        .checkout-wrap &:first-child {
-            padding-left: 0;
-        }
+      height: 24px;
+      display: inline-block;
+      width: 35px;
+      margin: 5px;
     }
 
-    &-checkout {
-        .checkout-info {
-            @include tablet-all {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                flex-wrap: wrap;            
-                padding-bottom: 35px;
-            }
-        }
+    .liqpay {
+      width: 115px;
+      background-image: url("../images/liqpay.svg");
     }
 
-    &-link {
-        color: $color-primary6;
-        font-size: 14px;
-
-        &:hover {
-            color: $color-primary22;
-        }
+    .mastercard {
+      background-image: url("../images/mastercard.svg");
     }
 
-    &-payment_methods {
-        margin: 0 -5px;
-        overflow: auto;
-        padding-top: 35px;
-
-        &-item {
-            height: 24px;
-            display: inline-block;
-            width: 35px;
-            margin: 5px;
-        }
-        
-        .liqpay {
-            width: 115px;
-            background-image: url('../images/liqpay.svg');
-        }
-
-        .mastercard {
-            background-image: url('../images/mastercard.svg');
-        }
-
-        .visa {
-            background-image: url('../images/visa.svg');
-        }
+    .visa {
+      background-image: url("../images/visa.svg");
     }
+  }
 
-    .checkout-info {
-        // padding-top: 0;
-        // padding-bottom: 0;
-    }
+  .checkout-info {
+    // padding-top: 0;
+    // padding-bottom: 0;
+  }
 
-    .checkout-summary {
-        padding: 0;
-    }
+  .checkout-summary {
+    padding: 0;
+  }
 }
